Release 17.09.1 (pending)
==========================

- Fixed late packet reporting in SoapyLMS7 stream status
- Fixed WriteStream() end of burst flushing in fifo.h
- Fixed abs() overload compiler issue in lms7_device.cpp
- Removed private include in mcu_program/host_src/main.cpp

Release 17.09.0 (2017-09-01)
==========================

LimeSuite library changes:
- Added transfer size adjustment based on sample rate
- Improved MCU calibration procedures
- Initial support for LimeSDR-QPCIe
- Changed format to 16 bit for data transfer when float (non-native) format is selected in API 

LMS API changes:
- Added external reference clock(LMS_CLOCK_EXTREF) configuration to LMS_SetClockFreq()  
- Change LMS_SetGaindB() and LMS_SetNormalizedGain() to select optimal TBB gain for TX
- Fixed LMS_GetStreamStatus() not returning some status values

LimeSuiteGUI changes:
- Unified read/write params in board controls panel
- Fixed some GUI fields not updating correctly/reporting wrong values

Other changes:
- LimeSDR v1.4 updated to r2.9 gateware
- Added LMS API doxygen generation to CMake
- Added CMake option to enable compiler SIMD flags

Release 17.06.0 (2017-06-20)
==========================

API additions:
- LMS_GPIODirRead
- LMS_GPIODirWrite
- LMS_CalibrateInternalADC
- LMS_CalibrateAnalogRSSIDC
- LMS_CalibrateRP_BIAS
- LMS_CalibrateTxGain
- LMS_SetClockFreqWithSpurCancelation

General changes:
- SoapyLMS7 - added getMasterClockRates()
- SoapyLMS7 - added getSampleRateRange()
- LimeSDR v1.4 updated to r2.8 gateware
- GPIO support in SoapyLM7 module
- Library level logging support
- Speed up x640,x641 spi
- FFTviewer: add checkbox for RX->TX loopback control
- Merged major MCU based calibrations update

Release 17.02.2 (2017-04-30)
==========================

- Fixed register typo in LMS7002M::SetTxDCOffset()
- Added option defaults for stream args in SoapyLMS7
- Fixed LMS7002M::GetPathRFE() currently selected path

Release 17.02.1 (2017-03-11)
==========================
