@@ -1,6 +1,7 @@
 Release 17.09.1 (pending)
 ==========================
 
+- SoapyLMS7 caches stream enable and disables on close
 - Fixed late packet reporting in SoapyLMS7 stream status
 - Fixed WriteStream() end of burst flushing in fifo.h
 - Fixed abs() overload compiler issue in lms7_device.cpp
